welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: ')' expected but '<-' found.
while (j <-haut-1){
         ^Array1:28: error: illegal start of simple expression
}
^